--- a/src/app.html
+++ b/src/app.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <link
-      rel="icon"
-      type="image/png"
-      href="/static/favicon-96x96.png"
-      sizes="96x96"
-    />
-    <link rel="shortcut icon" href="/static/favicon.ico" />
-    <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/static/apple-touch-icon.png"
+      href="%sveltekit.assets%/static/apple-touch-icon.png"
     />
-    <link rel="manifest" href="/static/site.webmanifest" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%sveltekit.assets%/static/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%sveltekit.assets%/static/favicon-16x16.png"
+    />
+    <link rel="manifest" href="%sveltekit.assets%/static/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
